# python_backend_skeleton

./: .gitignore  Readme.md  dodo.py  main.py  pyproject.toml
.github/workflows/: codeql.yml  safety.yml
model/migrations/: env.py
routers/: status.py
routers/weather/: current.py  historical.py
